...
                                                <action selector="arrangeInFront:" target="Ady-hI-5gd" id="DRN-fu-gQh"/>
                                            </connections>
                                        </menuItem>
                                    </items>
                                </menu>
                            </menuItem>
                            <menuItem title="Develop" id="oFK-Xn-9Hy" userLabel="Develop">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="Develop" id="UiW-p7-3Na">
                                    <items>
                                        <menuItem title="Generate Test Sprites..." id="XkW-lk-hEV" userLabel="Generate Test Sprites...">
                                            <modifierMask key="keyEquivalentModifierMask"/>
                                            <connections>
                                                <action selector="generateTestData:" target="Ady-hI-5gd" id="zhy-n0-FSr"/>
                                            </connections>
                                        </menuItem>
                                    </items>
...
