...
            }))
        }
    }

    /**
     A closure executed when the user closes the window. The sole parameter gets
     the value `true` on the user selecting "OK", `false` on "Cancel".
     */
    var dismissHandler: ((Bool) -> Void)?

    // MARK: - NSViewController

    override func viewDidLoad() {
...
